--- a/package.json
+++ b/package.json
@@ -10,18 +10,23 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "@popperjs/core": "^2.10.2",
+        "@popperjs/core": "^2.11.6",
         "@tailwindcss/forms": "^0.5.2",
         "@tailwindcss/typography": "^0.5.0",
         "alpinejs": "^3.0.6",
         "autoprefixer": "^10.4.7",
         "axios": "^0.21",
-        "bootstrap": "^5.1.3",
+        "bootstrap": "^5.2.3",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.4.14",
-        "sass": "^1.32.11",
-        "sass-loader": "^11.0.1",
+        "resolve-url-loader": "^5.0.0",
+        "sass": "^1.56.2",
+        "sass-loader": "^12.6.0",
         "tailwindcss": "^3.1.0"
+    },
+    "dependencies": {
+        "popper.js": "^1.16.1",
+        "sweetalert2": "^11.6.15"
     }
 }
